--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
-    "phpunit/phpunit": "^8"
+    "phpunit/phpunit": "^8",
+    "php-coveralls/php-coveralls": "^2.0",
+    "phpunit/php-code-coverage": "^7.0"
   },
   "autoload": {
     "psr-4": {
